--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "formik": "^2.4.6",
     "framer-motion": "^11.11.13",
     "lucide-react": "^0.460.0",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-apexcharts": "^1.7.0",
     "react-chartjs-2": "^5.2.0",
