--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@giphy/react-components": "^9.8.0",
     "@reduxjs/toolkit": "^2.3.0",
     "@vitejs/plugin-react": "^4.3.3",
     "antd": "^5.21.6",
@@ -32,12 +33,14 @@
     "react-icons": "^5.4.0",
     "react-infinite-scroll-component": "^6.1.0",
     "react-input-emoji": "^5.9.0",
+    "react-intersection-observer": "^9.14.1",
     "react-quill": "^2.0.0",
     "react-redux": "^9.1.2",
     "react-responsive": "^10.0.0",
     "react-router-dom": "^6.27.0",
     "redux": "^5.0.1",
     "socket.io-client": "^4.8.1",
+    "swiper": "^11.2.1",
     "unicode-emoji-picker": "^1.5.0",
     "yup": "^1.4.0"
   },
